<resources>
    <string name="app_name">20032024Camara</string>
    <string name="titulo">Gestion de Camara</string>
    <string name="menu1">Lector Barras/QR </string>
    <string name="menu2">Tomar foto</string>
    <!--    Activity Lector-->
    <string name="titulo1">Lector de Barra y QR</string>
    <string name="escanear">Escanear</string>
    <string name="res">Codigo Leido</string>
    <string name="descripcion">Captura descripcion</string>
    <string name="capturar">Capturar</string>
    <string name="limpiar">Limpiar</string>
    <!--    Activity Foto-->
    <string name="titulo2">Tomar fotografia</string>
    <string name="foto">Tomar fotografia</string>
    <string name="todo">TODO</string>
</resources>