<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="100dp"
        android:text="@string/titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo">

        <Button
            android:id="@+id/btnLector"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/menu1" />

        <Button
            android:id="@+id/btnFoto"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/menu2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>